--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/_old
-/content/apps
-/content/data
-/content/images
-/node_modules
+./_old
+./content/apps
+./content/data
+./content/images
+./node_modules
