--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.DS_Store?
 .DS_Store
 _old/
 content/apps/
@@ -6,3 +5,4 @@ content/data/
 content/plugins/
 content/images/
 node_modules/
+node_modules/*
