--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "html-to-text": "1.3.0",
     "knex": "0.7.3",
     "lodash": "2.4.1",
+    "material-design-icons": "^2.0.0",
     "moment": "2.10.2",
     "morgan": "1.5.0",
     "node-uuid": "1.4.2",
